--- a/.github/workflows/katalon-tests.yml
+++ b/.github/workflows/katalon-tests.yml
@@ -218,41 +218,48 @@ jobs:
           $env:JAVA_OPTS = '-Djava.awt.headless=true -Dorg.eclipse.swt.browser.DefaultType=none -Dorg.eclipse.swt.browser.noDefault=true -Dkatalon.webview.enabled=false -Dorg.eclipse.swt.browser.chromium.enabled=false -Declipse.e4.inject.javax.disabled=true -Dswt.autoKey=false'
           $env:KATALON_OPTS = '-noSplash -noExit -consoleLog'
           
-          # Chạy Katalon trực tiếp với & operator và capture output
-          # Redirect cả stdout và stderr
-          & $katalonExe `
-            -runMode=console `
-            -console `
-            -noSplash `
-            -projectPath="$projectPathFormatted" `
-            -retry=0 `
-            -testSuitePath="$testSuitePathFormatted" `
-            -executionProfile=default `
-            -browserType="Chrome (headless)" `
-            -apiKey="" `
-            -g_username="" `
-            -g_password="" `
-            -g_baseUrl="$baseUrl" `
-            -reportFolder="$reportFolderFormatted" `
-            *>&1 | Tee-Object -FilePath "katalon-output.txt"
+          Write-Host "Starting Katalon process..."
+          Write-Host "Command: $katalonExe -runMode=console -console -noSplash -projectPath=`"$projectPathFormatted`" -retry=0 -testSuitePath=`"$testSuitePathFormatted`" -executionProfile=default -browserType=`"Chrome (headless)`" -apiKey= -g_username= -g_password= -g_baseUrl=`"$baseUrl`" -reportFolder=`"$reportFolderFormatted`""
           
-          # Lấy exit code
-          $exitCode = $LASTEXITCODE
+          # Chạy Katalon và capture output vào file
+          $process = Start-Process -FilePath $katalonExe `
+            -ArgumentList "-runMode=console", "-console", "-noSplash", "-projectPath=$projectPathFormatted", "-retry=0", "-testSuitePath=$testSuitePathFormatted", "-executionProfile=default", "-browserType=Chrome (headless)", "-apiKey=", "-g_username=", "-g_password=", "-g_baseUrl=$baseUrl", "-reportFolder=$reportFolderFormatted" `
+            -NoNewWindow `
+            -Wait `
+            -PassThru `
+            -RedirectStandardOutput "katalon-stdout.txt" `
+            -RedirectStandardError "katalon-stderr.txt"
           
-          if ($null -eq $exitCode) {
-            $exitCode = 0
-          }
+          # Lấy exit code từ process
+          $exitCode = $process.ExitCode
           
           Write-Host "=========================================="
           Write-Host "Katalon process completed with exit code: $exitCode"
           
-          # Đọc và hiển thị output
-          if (Test-Path "katalon-output.txt") {
-            Write-Host "=== Last 100 lines of Katalon Output ==="
-            $outputLines = Get-Content "katalon-output.txt" -Tail 100 -ErrorAction SilentlyContinue
-            if ($outputLines) {
-              $outputLines | ForEach-Object { Write-Host $_ }
+          # Đọc và hiển thị output từ stdout
+          if (Test-Path "katalon-stdout.txt") {
+            Write-Host "=== Katalon Standard Output (Last 200 lines) ==="
+            $stdoutLines = Get-Content "katalon-stdout.txt" -Tail 200 -ErrorAction SilentlyContinue
+            if ($stdoutLines) {
+              $stdoutLines | ForEach-Object { Write-Host $_ }
+            } else {
+              Write-Host "(stdout file is empty)"
             }
+          } else {
+            Write-Host "WARNING: katalon-stdout.txt not found"
+          }
+          
+          # Đọc và hiển thị output từ stderr
+          if (Test-Path "katalon-stderr.txt") {
+            Write-Host "=== Katalon Standard Error (Last 200 lines) ==="
+            $stderrLines = Get-Content "katalon-stderr.txt" -Tail 200 -ErrorAction SilentlyContinue
+            if ($stderrLines) {
+              $stderrLines | ForEach-Object { Write-Host $_ }
+            } else {
+              Write-Host "(stderr file is empty)"
+            }
+          } else {
+            Write-Host "WARNING: katalon-stderr.txt not found"
           }
           
         } catch {
@@ -272,24 +279,7 @@ jobs:
         Write-Host "Exit code: $exitCode"
         Write-Host "=========================================="
         
-        # Đọc và hiển thị output
-        if (Test-Path "katalon-stdout.txt") {
-          Write-Host "=== Katalon Standard Output ==="
-          $stdout = Get-Content "katalon-stdout.txt" -ErrorAction SilentlyContinue
-          if ($stdout) {
-            $stdout | ForEach-Object { Write-Host $_ }
-          } else {
-            Write-Host "(empty)"
-          }
-        }
-        
-        if (Test-Path "katalon-stderr.txt") {
-          Write-Host "=== Katalon Standard Error ==="
-          $stderr = Get-Content "katalon-stderr.txt" -ErrorAction SilentlyContinue
-          if ($stderr) {
-            $stderr | ForEach-Object { Write-Host $_ }
-          }
-        }
+        # Output đã được hiển thị trong try block ở trên
         
         # Set để dùng sau
         $global:LASTEXITCODE = $exitCode
