--- a/.github/workflows/katalon-tests.yml
+++ b/.github/workflows/katalon-tests.yml
@@ -38,7 +38,7 @@ jobs:
         # $KATALON_HOME_ORIGINAL = "$env:ProgramFiles\Katalon\Katalon Studio"
         
         # Option 2: Nếu cài trong user directory (uncomment dòng này và comment dòng trên)
-         $KATALON_HOME_ORIGINAL = "$env:USERPROFILE\.katalon\packages\KSE-10.4.2"
+        # $KATALON_HOME_ORIGINAL = "$env:USERPROFILE\.katalon\packages\KSE-10.4.2"
         
         # Option 3: Nếu dùng đường dẫn tùy chỉnh (uncomment và sửa)
         # $KATALON_HOME_ORIGINAL = "C:\Path\To\Katalon\Studio"
