--- a/.github/workflows/katalon-tests.yml
+++ b/.github/workflows/katalon-tests.yml
@@ -221,20 +221,41 @@ jobs:
           Write-Host "Starting Katalon process..."
           Write-Host "Command: $katalonExe -runMode=console -console -noSplash -consoleLog -projectPath=`"$projectPathFormatted`" -retry=0 -testSuitePath=`"$testSuitePathFormatted`" -executionProfile=default -browserType=`"Chrome (headless)`" -apiKey= -g_username= -g_password= -g_baseUrl=`"$baseUrl`" -reportFolder=`"$reportFolderFormatted`""
           
-          # Chạy Katalon và capture output vào file
-          # Lưu ý: Không dùng -noExit vì nó sẽ khiến Katalon không thoát sau khi chạy xong
-          Write-Host "Launching Katalon (this may take several minutes)..."
+          # Chạy Katalon hoàn toàn headless - dùng & operator trực tiếp và redirect output
+          Write-Host "Launching Katalon in headless mode (this may take several minutes)..."
+          Write-Host "NOTE: Katalon should NOT open GUI window. If it does, check JAVA_OPTS and KATALON_OPTS."
           
-          $process = Start-Process -FilePath $katalonExe `
-            -ArgumentList "-runMode=console", "-console", "-noSplash", "-consoleLog", "-projectPath=$projectPathFormatted", "-retry=0", "-testSuitePath=$testSuitePathFormatted", "-executionProfile=default", "-browserType=Chrome (headless)", "-apiKey=", "-g_username=", "-g_password=", "-g_baseUrl=$baseUrl", "-reportFolder=$reportFolderFormatted" `
-            -NoNewWindow `
-            -Wait `
-            -PassThru `
-            -RedirectStandardOutput "katalon-stdout.txt" `
-            -RedirectStandardError "katalon-stderr.txt"
+          # Đảm bảo environment variables được set
+          $env:JAVA_OPTS = '-Djava.awt.headless=true -Dorg.eclipse.swt.browser.DefaultType=none -Dorg.eclipse.swt.browser.noDefault=true -Dkatalon.webview.enabled=false -Dorg.eclipse.swt.browser.chromium.enabled=false -Declipse.e4.inject.javax.disabled=true -Dswt.autoKey=false'
+          $env:KATALON_OPTS = '-noSplash -noExit -consoleLog'
           
-          # Lấy exit code từ process
-          $exitCode = $process.ExitCode
+          Write-Host "Environment variables:"
+          Write-Host "  JAVA_OPTS: $env:JAVA_OPTS"
+          Write-Host "  KATALON_OPTS: $env:KATALON_OPTS"
+          
+          # Chạy Katalon trực tiếp với & operator và capture output
+          Write-Host "Executing Katalon (waiting for completion)..."
+          
+          # Dùng & operator và redirect output vào file
+          & $katalonExe `
+            -runMode=console `
+            -console `
+            -noSplash `
+            -consoleLog `
+            -projectPath="$projectPathFormatted" `
+            -retry=0 `
+            -testSuitePath="$testSuitePathFormatted" `
+            -executionProfile=default `
+            -browserType="Chrome (headless)" `
+            -apiKey="" `
+            -g_username="" `
+            -g_password="" `
+            -g_baseUrl="$baseUrl" `
+            -reportFolder="$reportFolderFormatted" `
+            *>&1 | Tee-Object -FilePath "katalon-output.txt"
+          
+          # Lấy exit code
+          $exitCode = $LASTEXITCODE
           
           if ($null -eq $exitCode) {
             $exitCode = 0
@@ -242,42 +263,23 @@ jobs:
           
           Write-Host "Katalon process finished. Exit code: $exitCode"
           
+          # Đọc output từ file
+          if (Test-Path "katalon-output.txt") {
+            Write-Host "=== Katalon Output (Last 300 lines) ==="
+            $outputLines = Get-Content "katalon-output.txt" -Tail 300 -ErrorAction SilentlyContinue
+            if ($outputLines) {
+              $outputLines | ForEach-Object { Write-Host $_ }
+            }
+          }
+          
           Write-Host "=========================================="
           Write-Host "Katalon process completed with exit code: $exitCode"
           
-          # Đọc và hiển thị output từ stdout
-          if (Test-Path "katalon-stdout.txt") {
-            $stdoutSize = (Get-Item "katalon-stdout.txt").Length
-            Write-Host "=== Katalon Standard Output (File size: $stdoutSize bytes, Last 300 lines) ==="
-            $stdoutLines = Get-Content "katalon-stdout.txt" -Tail 300 -ErrorAction SilentlyContinue
-            if ($stdoutLines) {
-              $stdoutLines | ForEach-Object { Write-Host $_ }
-            } else {
-              Write-Host "(stdout file is empty)"
-            }
-          } else {
-            Write-Host "WARNING: katalon-stdout.txt not found"
-          }
-          
-          # Đọc và hiển thị output từ stderr (quan trọng để debug)
-          if (Test-Path "katalon-stderr.txt") {
-            $stderrSize = (Get-Item "katalon-stderr.txt").Length
-            Write-Host "=== Katalon Standard Error (File size: $stderrSize bytes, Last 300 lines) ==="
-            $stderrLines = Get-Content "katalon-stderr.txt" -Tail 300 -ErrorAction SilentlyContinue
-            if ($stderrLines) {
-              $stderrLines | ForEach-Object { Write-Host $_ }
-            } else {
-              Write-Host "(stderr file is empty)"
-            }
-          } else {
-            Write-Host "WARNING: katalon-stderr.txt not found"
-          }
-          
           # Kiểm tra xem có lỗi license/authentication không
-          if (Test-Path "katalon-stdout.txt") {
-            $stdoutContent = Get-Content "katalon-stdout.txt" -Raw -ErrorAction SilentlyContinue
-            if ($stdoutContent) {
-              if ($stdoutContent -like "*license*" -or $stdoutContent -like "*License*" -or $stdoutContent -like "*authentication*" -or $stdoutContent -like "*login*") {
+          if (Test-Path "katalon-output.txt") {
+            $outputContent = Get-Content "katalon-output.txt" -Raw -ErrorAction SilentlyContinue
+            if ($outputContent) {
+              if ($outputContent -like "*license*" -or $outputContent -like "*License*" -or $outputContent -like "*authentication*" -or $outputContent -like "*login*") {
                 Write-Host "⚠ WARNING: Possible license/authentication issue detected in output"
                 Write-Host "Katalon Studio FREE version can run in CI/CD, but you may need to:"
                 Write-Host "1. Open Katalon Studio GUI on the runner machine at least once"
