--- a/.github/workflows/katalon-tests.yml
+++ b/.github/workflows/katalon-tests.yml
@@ -58,8 +58,11 @@ jobs:
          $env:JAVA_OPTS = '-Djava.awt.headless=true -Dorg.eclipse.swt.browser.DefaultType=none -Dkatalon.webview.enabled=false -Dorg.eclipse.swt.browser.chromium.enabled=false -Declipse.e4.inject.javax.disabled=true'
          $env:KATALON_OPTS = '-noSplash -consoleLog'
          
-         # Chạy Katalon
+         # Chạy Katalon - để mở GUI cũng được, miễn chạy được test
          Write-Host "Starting Katalon execution..."
+         Write-Host "Note: Warnings in logs are normal, tests will run after Katalon finishes loading"
+         
+         # Chạy và đợi hoàn thành
          & $katalonExe `
            -runMode=console `
            -console `
@@ -76,7 +79,10 @@ jobs:
          $exitCode = $LASTEXITCODE
          if ($null -eq $exitCode) { $exitCode = 0 }
          
-         Write-Host "Tests completed with exit code: $exitCode"
+         Write-Host "=========================================="
+         Write-Host "Katalon execution finished"
+         Write-Host "Exit code: $exitCode"
+         Write-Host "=========================================="
           
     - name: Upload Test Reports
       if: always()
